@@ -1,7 +1,7 @@
 /*
  * This file is a part of BSL Language Server.
  *
- * Copyright (c) 2018-2023
+ * Copyright (c) 2018-2024
  * Alexey Sosnoviy <labotamy@gmail.com>, Nikita Fedkin <nixel2007@gmail.com> and contributors
  *
  * SPDX-License-Identifier: LGPL-3.0-or-later
@@ -28,14 +28,13 @@ import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticT
 import com.github._1c_syntax.bsl.languageserver.diagnostics.metadata.DiagnosticType;
 import com.github._1c_syntax.bsl.languageserver.utils.Ranges;
 import com.github._1c_syntax.bsl.languageserver.utils.Trees;
+import com.github._1c_syntax.bsl.mdo.TabularSection;
+import com.github._1c_syntax.bsl.mdo.TabularSectionOwner;
 import com.github._1c_syntax.bsl.parser.BSLParserRuleContext;
 import com.github._1c_syntax.bsl.parser.SDBLParser;
 import com.github._1c_syntax.bsl.types.ConfigurationSource;
 import com.github._1c_syntax.bsl.types.MDOType;
 import com.github._1c_syntax.bsl.types.MdoReference;
-import com.github._1c_syntax.mdclasses.mdo.AbstractMDObjectBase;
-import com.github._1c_syntax.mdclasses.mdo.AbstractMDObjectComplex;
-import com.github._1c_syntax.mdclasses.mdo.attributes.TabularSection;
 import com.github._1c_syntax.utils.CaseInsensitivePattern;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import lombok.AllArgsConstructor;
@@ -154,7 +153,8 @@ public class RefOveruseDiagnostic extends AbstractSDBLVisitorDiagnostic {
   }
 
   private Map<String, List<String>> calcDataSourceWithTabularSectionNames(
-    Stream<? extends SDBLParser.DataSourceContext> dataSources) {
+    Stream<? extends SDBLParser.DataSourceContext> dataSources
+  ) {
 
     return dataSources
       .map(dataSourceContext -> new TabularSectionTable(getTableNameOrAlias(dataSourceContext),
@@ -177,7 +177,9 @@ public class RefOveruseDiagnostic extends AbstractSDBLVisitorDiagnostic {
     );
   }
 
-  private static Collection<SDBLParser.DataSourceContext> getInnerDataSource(SDBLParser.DataSourceContext dataSourceContext) {
+  private static Collection<SDBLParser.DataSourceContext> getInnerDataSource(
+    SDBLParser.DataSourceContext dataSourceContext
+  ) {
     var result = new ArrayList<SDBLParser.DataSourceContext>();
     Optional.ofNullable(dataSourceContext.dataSource())
       .map(RefOveruseDiagnostic::getInnerDataSource)
@@ -186,12 +188,12 @@ public class RefOveruseDiagnostic extends AbstractSDBLVisitorDiagnostic {
     var joinDataSources = dataSourceContext.joinPart().stream()
       .map(SDBLParser.JoinPartContext::dataSource)
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
     result.addAll(joinDataSources);
 
     var dataSourcesFromJoins = joinDataSources.stream()
       .flatMap(dataSourceContext1 -> getInnerDataSource(dataSourceContext1).stream())
-      .collect(Collectors.toList());
+      .toList();
 
     result.addAll(dataSourcesFromJoins);
     return result;
@@ -210,7 +212,6 @@ public class RefOveruseDiagnostic extends AbstractSDBLVisitorDiagnostic {
         .map(tableContext -> (ParseTree) tableContext.parameter()))
       .map(ParseTree::getText)
       .orElse("");
-
   }
 
   private List<String> getTabularSectionNames(SDBLParser.DataSourceContext dataSourceContext) {
@@ -242,18 +243,19 @@ public class RefOveruseDiagnostic extends AbstractSDBLVisitorDiagnostic {
       return Collections.emptyList();
     }
     return MDOType.fromValue(mdo.type.getText()).stream()
-      .map(mdoType1 -> MdoReference.create(mdoType1, mdo.tableName.getText()))
-      .map(mdoReference -> configuration.getChildrenByMdoRef().get(mdoReference))
-      .filter(AbstractMDObjectComplex.class::isInstance)
-      .map(AbstractMDObjectComplex.class::cast)
+      .map(mdoTypeTabular -> MdoReference.create(mdoTypeTabular, mdo.tableName.getText()))
+      .map(configuration::findChild)
+      .filter(Optional::isPresent)
+      .map(Optional::get)
+      .filter(TabularSectionOwner.class::isInstance)
+      .map(TabularSectionOwner.class::cast)
       .flatMap(RefOveruseDiagnostic::getTabularSectionNames)
       .collect(Collectors.toList());
   }
 
-  private static Stream<String> getTabularSectionNames(AbstractMDObjectComplex mdObjectComplex) {
-    return mdObjectComplex.getAttributes().stream()
-      .filter(TabularSection.class::isInstance)
-      .map(AbstractMDObjectBase::getName);
+  private static Stream<String> getTabularSectionNames(TabularSectionOwner tabularSectionOwner) {
+    return tabularSectionOwner.getTabularSections().stream()
+      .map(TabularSection::getName);
   }
 
   private static Stream<SDBLParser.ColumnContext> getSimpleOverused(List<SDBLParser.ColumnContext> columnsCollection) {
@@ -284,8 +286,7 @@ public class RefOveruseDiagnostic extends AbstractSDBLVisitorDiagnostic {
     var children = extractFirstMetadataTypeName(ctx);
     var refIndex = findLastRef(children);
 
-    final int childCount = children.size();
-    final var lastIndex = childCount - 1;
+    final var lastIndex = children.size() - 1;
     if (refIndex == lastIndex) {
       var penultimateIdentifierName = children.get(lastIndex - LAST_INDEX_OF_TABLE_DOT_REF).getText();
       return dataSourceWithTabularSectionNames.get(penultimateIdentifierName) == null;
